--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "/"
-title = "Terrassa"
-author = "Daniel Zaragoza (Danielkvist)"
+title = "Hawaii Chapter, American Academy of Pediatrics"
+author = "Hawaii Chapter, American Academy of Pediatrics"
 googleAnalytics = ""
 defaultContentLanguage = "en"
 language = "en-US"
@@ -8,8 +8,10 @@ paginate = 3
 
 theme = "hugo-terrassa-theme"
 
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+
 [params]
-    description = "Terrassa is a simple, fast and responsive theme for Hugo with a strong focus on accessibility made from scratch."
+    description = "The Chapter is a voluntary organization of over 300 members in private, group, military and academic practice as well as pediatricians in training and other non-pediatric physicians interested in Child Health issues."
     favicon = "favicon.ico"
     logo = ""
 
@@ -18,7 +20,7 @@ theme = "hugo-terrassa-theme"
 
 [params.cta] # Call To Action 
     show = true
-    cta = "Contact"
+    cta = "Join"
     link = "contact" # Relative URL
 
 [params.separator] # Separators between sections on the home page
@@ -58,10 +60,10 @@ theme = "hugo-terrassa-theme"
 [params.social]
     twitter = "https://twitter.com/john"
     facebook = "https://facebook.com/john"
-    github = "https://github.com/john"
+    github = ""
     gitlab = ""
-    codepen = "https://codepen.io/john"
-    instagram = "https://instagram.com/john"
+    codepen = ""
+    instagram = ""
     pinterest = ""
     youtube = ""
     linkedin = ""
